re PR libstdc++/29224 (-Wshadow causing warning in <tr1/functional>)

2006-09-26  Howard Hinnant  <hhinnant@apple.com>

	PR libstdc++/29224
	* include/tr1/functional_iterate.h: Avoid -Wshadow warnings.

From-SVN: r117222